--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/CarloDiazPortilla/NOC#readme",
   "devDependencies": {
     "@types/node": "^25.0.3",
+    "@types/nodemailer": "^7.0.5",
     "rimraf": "^6.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
@@ -29,6 +30,7 @@
   "dependencies": {
     "cron": "^4.4.0",
     "dotenv": "^17.2.3",
-    "env-var": "^7.5.0"
+    "env-var": "^7.5.0",
+    "nodemailer": "^7.0.12"
   }
 }
