--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "env-var": "^7.5.0",
+    "mongoose": "^9.1.4",
     "nodemailer": "^7.0.12"
   }
 }
