--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-  "files.exclude": {
+  "files.watcherExclude": {
     "**/node_modules": true,
     "**/dist": true,
     "**/.next": true
-  }
+  },
+  "eslint.run": "onSave"
 }
