--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ lerna-debug.log*
 
 # Mongo Database volume
 mongo
+# Postgres Database volume
+postgres
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
