--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Network Operations Center App for monitoring that implements Clean Architecture",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd --respawn --clear src/app.ts",
+    "dev": "tsx watch src/app.ts",
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js"
   },
@@ -15,23 +15,29 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/CarloDiazPortilla/NOC/issues"
   },
   "homepage": "https://github.com/CarloDiazPortilla/NOC#readme",
   "devDependencies": {
-    "@types/node": "^25.0.3",
+    "@types/node": "^25.0.10",
     "@types/nodemailer": "^7.0.5",
+    "@types/pg": "^8.16.0",
+    "prisma": "^7.3.0",
     "rimraf": "^6.1.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "env-var": "^7.5.0",
     "mongoose": "^9.1.4",
-    "nodemailer": "^7.0.12"
+    "nodemailer": "^7.0.12",
+    "pg": "^8.17.2"
   }
 }
